--- a/styles/style.css
+++ b/styles/style.css
@@ -279,3 +279,32 @@ line-height: 20px;
 border: none;
 }
 
+/* footer section start */
+
+.footer-section{
+    width: 100%px;
+height: 177px;
+
+background: rgb(11, 13, 23);
+
+}
+#footer-content{
+    text-align: center;
+    color: white;
+    padding: 50px 600px;
+    
+}
+
+#footer-content h3{
+   color: rgb(255, 89, 89);
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 44px;
+    margin-bottom: 25px;
+}
+#footer-content p{
+   color: rgb(217, 219, 225);
+   font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+}
